# AdventOfCode2023

./: .gitignore  Cargo.toml  benchmarks.txt  justfile
daily-template/: Cargo.toml
day-1/: Cargo.toml
day-1/src/: part1.rs  part2.rs
day-10/: Cargo.toml
day-10/src/: part1.rs  part2.rs  part2_bad.rs
day-11/: Cargo.toml
day-11/src/: part1.rs  part2.rs
day-12/: Cargo.toml
day-12/src/: part1.rs  part2.rs
day-2/: Cargo.toml
day-2/src/: part1.rs  part2.rs
day-3/: Cargo.toml
day-3/src/: part1.rs  part2.rs
day-4/: Cargo.toml
day-4/src/: part1.rs  part2.rs
day-5/: Cargo.toml
day-5/src/: part1.rs  part2.rs
day-6/: Cargo.toml
day-6/benches/: benchmarks.rs
day-6/src/: lib.rs  part1.rs  part1_quadratic.rs  part2.rs  part2_quadratic.rs
day-7/: Cargo.toml
day-7/src/: part1.rs  part2.rs
day-8/: Cargo.toml
day-8/src/: part1.rs  part2.rs
day-9/: Cargo.toml
day-9/src/: part1.rs  part2.rs
