[workspace]
resolver = "2"

members = ["day-*"]

[workspace.dependencies]
regex = "1.10"
itertools = "0.12"
rayon = "1.8"
glam = "0.24"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
rstest = "0.18.2"
rstest_reuse = "0.6.0"
criterion = { version = "0.5", features = ["html_reports"] }

[profile.flamegraph]
inherits = "release"
debug = true
